# cxx-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.devcontainer/: devcontainer.json
app/: CMakeLists.txt  main.cc
cmake/: GetGitVersion.cmake  conan.cmake
lib/: CMakeLists.txt
lib/interface/: lib.h
lib/source/: lib.cc
tests/: CMakeLists.txt  test_skeleton.cc
